<resources>
    <string name="app_name">iTunes Client</string>
    <string name="Search">Search</string>
    <string name="Search_Something">Search Something</string>
    <string name="Artist">Artist</string>
    <string name="NameLabel">Name: </string>
    <string name="GenreLabel">Genre: </string>
    <string name="TypeLabel">Type: </string>
    <string name="ArtistLabel">Artist: </string>
    <string name="KindLabel">"Kind: "</string>
    <string name="Track">Track</string>
</resources>