<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp">
            <!--
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/trackImage"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/sample_track" />
            -->
            <TextView
                android:id="@+id/trackNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NameLabel"
                android:textColor="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/trackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/trackNameLabel"
                android:textColor="@color/secondaryTextColor"
                tools:text="Maroon 5" />

            <TextView
                android:id="@+id/trackKindLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trackNameLabel"
                android:text="@string/KindLabel"
                android:textColor="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/trackKind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trackNameLabel"
                android:layout_toEndOf="@+id/trackNameLabel"
                android:textColor="@color/secondaryTextColor"
                tools:text="Music" />

            <TextView
                android:id="@+id/trackArtistLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trackKind"
                android:text="@string/ArtistLabel"
                android:textColor="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/trackArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trackKind"
                android:layout_toEndOf="@+id/trackArtistLabel"
                android:textColor="@color/secondaryTextColor"
                tools:text="Zeki Müren" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>